# ncomp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
.circleci/: config.yml  environment-dev-Darwin.yml  environment-dev-Linux.yml  install-circle.sh  run-checks.sh
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
ci/: install-circle.sh
lib/blas/: Makefile.am
lib/lapack/: Makefile.am
src/: CMakeLists.txt  Makefile.am  Makefile.in  coerce.def  linint2.c  ncomp.h  ncomp_build.h  util.c  util.cpp  util.h  wrapper.h
src/fortran/: CMakeLists.txt  MOC.loops.f90  Makefile.am  Makefile.in  eof_scripps.f90  linint2.f90  linmsg_dp.f90  prneofTranspose.f90  prneof_dp.f90  prneofts_dp.f90  rcm2rgrid.f  rcm2rgrid.f90  statx.f90  statx_dp.f90
src/ncomp/: constants.h  types.h  util.h  wrapper.h
src/ncomp_build/: util.hpp
src/ncomp_internal/: util.hpp
src/wrappers/: Makefile.am  Makefile.in  eof.cpp  eofW.cpp  linint2.c  linint2.cpp  mocloops.cpp  rcm2rgrid.cpp
test/: Makefile.am  test_eofunc_01.c  test_eofunc_01.ncl  test_eofunc_02.c  test_eofunc_02.ncl  test_eofunc_03.c  test_eofunc_03.ncl  test_eofunc_04.c  test_eofunc_05.c  test_eofunc_05.ncl  test_eofunc_06.c  test_eofunc_06.ncl  test_eofunc_n_01.c  test_eofunc_n_01.ncl  test_eofunc_n_02.c  test_eofunc_n_02.ncl  test_eofunc_n_03.c  test_eofunc_n_03.ncl  test_eofunc_n_04.c  test_eofunc_n_04.ncl  test_eofunc_n_05.c  test_eofunc_n_05.ncl  test_eofunc_n_06.c  test_eofunc_n_07.c  test_eofunc_n_07.ncl  test_eofunc_north_01.c  test_eofunc_north_01.ncl  test_eofunc_north_02.c  test_eofunc_north_02.ncl  test_eofunc_ts_01.c  test_eofunc_ts_01.ncl  test_eofunc_ts_n_01.c  test_eofunc_ts_n_01.ncl  test_linint2.c  test_moc_globe_atl.c  test_moc_globe_atl.ncl
test/resources/: SampleSST_ev_rearranged.txt  SampleSST_ev_ts.txt
